<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="kurmakaeva.anastasia.ricknmortycharacters.ui.CharacterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="always"
        android:transitionGroup="true">

        <ImageView
            android:id="@+id/characterPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/placeholder"
            android:contentDescription="@{viewModel.singleCharacter.name}"
            app:layout_constraintBottom_toTopOf="@id/characterNameDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/characterNameDetail"
            style="@style/LargeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:padding="@dimen/regular_padding"
            android:text="@{viewModel.singleCharacter.name}"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toTopOf="@id/characterLastKnownLocation"
            app:layout_constraintEnd_toStartOf="@id/characterGender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/characterPicture"
            tools:text="Character name" />

        <ImageView
            android:id="@+id/characterGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/regular_margin"
            android:adjustViewBounds="true"
            android:contentDescription="@{viewModel.singleCharacter.status}"
            android:paddingVertical="@dimen/regular_padding"
            app:layout_constraintBottom_toTopOf="@id/characterLastKnownLocation"
            app:layout_constraintEnd_toStartOf="@id/characterStatus"
            app:layout_constraintStart_toEndOf="@id/characterNameDetail"
            app:layout_constraintTop_toBottomOf="@id/characterPicture"
            app:srcCompat="@drawable/gender_female" />

        <ImageView
            android:id="@+id/characterStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@{viewModel.singleCharacter.status}"
            android:padding="@dimen/regular_padding"
            app:layout_constraintBottom_toTopOf="@id/characterLastKnownLocation"
            app:layout_constraintTop_toBottomOf="@id/characterPicture"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/alive_status" />

        <TextView
            android:id="@+id/lastKnownLocationLabel"
            style="@style/SmallText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/regular_padding"
            android:text="@string/last_known_location_label"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/originLabel"
            app:layout_constraintEnd_toStartOf="@id/characterLastKnownLocation"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/characterNameDetail" />

        <TextView
            android:id="@+id/characterLastKnownLocation"
            style="@style/SmallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.singleCharacter.locationData.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/lastKnownLocationLabel"
            app:layout_constraintBottom_toTopOf="@id/characterOrigin"
            app:layout_constraintBaseline_toBaselineOf="@id/lastKnownLocationLabel"
            tools:text="@string/dummy_location"/>

        <TextView
            android:id="@+id/originLabel"
            style="@style/SmallText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/regular_padding"
            android:text="@string/origin_label"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/characterOrigin"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lastKnownLocationLabel" />

        <TextView
            android:id="@+id/characterOrigin"
            style="@style/SmallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.singleCharacter.origin.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/originLabel"
            app:layout_constraintTop_toBottomOf="@id/characterLastKnownLocation"
            app:layout_constraintBottom_toTopOf="@id/characterSpecies"
            app:layout_constraintBaseline_toBaselineOf="@id/originLabel"
            tools:text="@string/dummy_origin"/>

        <TextView
            android:id="@+id/speciesLabel"
            style="@style/SmallText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/regular_padding"
            android:text="@string/species_label"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/characterSpecies"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/originLabel" />

        <TextView
            android:id="@+id/characterSpecies"
            style="@style/SmallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.singleCharacter.species}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/speciesLabel"
            app:layout_constraintTop_toBottomOf="@id/characterOrigin"
            app:layout_constraintBaseline_toBaselineOf="@id/speciesLabel"
            tools:text="@string/dummy_species"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>